<resources>
    <string name="app_name">Reliant Dispatch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="service_desr">Reliant Service</string>
    <string name="notify_title">Reliant service retrieves the location</string>
    <string name="channel_name">Reliant Location</string>
    <string name="nav_header_text1">Reliant Dispatch</string>
    <string name="nav_header_text2">Welcome, %s</string>
    <string name="nav_header_text3">Company: Westwood</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="menu_ebols">e-Bill of Lading</string>
    <string name="menu_canceled">Cancelled eBOLs</string>
    <string name="menu_archived">Archived eBOLs</string>
    <string name="menu_profile">My profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_drafted">Drafted</string>
    <string name="menu_assigned">Assigned</string>
    <string name="menu_picked_up">Picked Up</string>
    <string name="menu_delivered">Delivered</string>
    <string name="menu_paid">Paid</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_details">Details</string>
    <string name="menu_pickup_inspection">Pickup Inspection</string>
    <string name="menu_pickup_inspection_view">View Pickup Inspection</string>
    <string name="menu_delivery_inspection">Delivery Inspection</string>
    <string name="menu_delivery_inspection_view">View Delivery Inspection</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_add_photo">Take and add photo</string>
    <string name="menu_choose_file">Choose File</string>
    <string name="menu_cancel">Cancel</string>
    <string name="title_drafted">Drafted eBOLs</string>
    <string name="title_assigned">Assigned eBOLs</string>
    <string name="title_picked_up">Picked Up eBOLs</string>
    <string name="title_delivered">Delivered eBOLs</string>
    <string name="title_paid">Paid eBOLs</string>
    <string name="title_cancelled">Cancelled eBOLs</string>
    <string name="title_archived">Archived</string>
    <string name="title_create">Create New eBOL</string>
    <string name="title_details">Details of eBOL</string>
    <string name="title_reset_password">Reset Your Password</string>
    <string name="title_pickup_inspection">Pickup Inspection</string>
    <string name="title_delivery_inspection">Delivery Inspection</string>
    <string name="title_additional_inspection">Additional Inspection</string>
    <string name="title_submit_pickup">Submit Pickup</string>
    <string name="title_submit_delivery">Submit Delivery</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_driver_signature">Driver Signature</string>
    <string name="title_settings">Settings</string>
    <string name="title_change_password">Change Password</string>
    <string name="dialog_title_error">Alert</string>
    <string name="dialog_title_info">Alert</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_title_damage">Damage kind</string>
    <string name="dialog_msg_progress">Please wait&#8230;</string>
    <string name="button_scan_vin">Scan VIN  Barcode or QR</string>
    <string name="button_enter_vehicle">Enter Vehicle Info Manually</string>
    <string name="button_close">Close</string>
    <string name="button_save">Save</string>
    <string name="button_submit">Submit</string>
    <string name="button_create">Create new eBOL</string>
    <string name="button_details">Details</string>
    <string name="button_pickup">Pickup</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_enter_vin">Enter VIN # Manually</string>
    <string name="button_flashlight">Flashlight</string>
    <string name="button_rotate">Rotate Camera</string>
    <string name="button_customer_av">Customer Available</string>
    <string name="button_customer_na">Customer Not Available</string>
    <string name="button_clear">&lt;u>Clear&lt;/u></string>
    <string name="button_login">Login</string>
    <string name="button_forgot">Forgot Password</string>
    <string name="button_signup">Sign Up for FREE</string>
    <string name="button_reset_password">Reset Password</string>
    <string name="button_try_again">Try Again</string>
    <string name="button_perform_inspection">Perform Inspection</string>
    <string name="button_add_attachments">Add Attachments</string>
    <string name="button_remove">REMOVE</string>
    <string name="button_photo">Photo Inspect</string>
    <string name="button_mark">Mark Damage</string>
    <string name="button_retake">Retake Photo</string>
    <string name="button_clear_last">Clear Last</string>
    <string name="button_no_damage">No Damage</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_minor">Minor</string>
    <string name="button_major">Major</string>
    <string name="button_only_w_jump">Only w/Jump</string>
    <string name="button_submit_pickup">Submit Pickup</string>
    <string name="button_submit_delivery">Submit Delivery</string>
    <string name="button_repeat">Repeat</string>
    <string name="button_send_invoice">Send Invoice</string>
    <string name="button_deliver">Deliver</string>
    <string name="button_paid">Paid</string>
    <string name="button_archive">Archive</string>
    <string name="button_restore">Restore</string>
    <string name="button_edit_profile">Edit Profile</string>
    <string name="button_test_sms">Test - Send Text Message</string>
    <string name="button_change_password">Change Password</string>
    <string name="button_refer_friend">Refer a Friend</string>
    <string name="save_confirm">Confirm. Do you want to save data?</string>
    <string name="close_confirm">There are unsaved changes on this screen. Do you want to discard them?</string>
    <string name="remove_damage_confirm">Do you want to remove the %s mark?</string>
    <string name="remove_image_confirm">Do you want to remove the image?</string>
    <string name="remove_file_confirm">Do you want to remove the attachment file?</string>
    <string name="remove_ebol_confirm">Do you want to completely delete the eBOL?</string>
    <string name="cancel_ebol_confirm">Do you want to cancel the eBOL?</string>
    <string name="archive_ebol_confirm">Do you want to archive the eBOL?</string>
    <string name="remove_vehicle_confirm">Do you want to delete the vehicle?</string>
    <string name="delete_ebol_confirm">Do you want to delete the eBOL?</string>
    <string name="label_loadid">Load ID</string>
    <string name="hint_loadid">Load ID *</string>
    <string name="label_trailer_type">Trailer Type</string>
    <string name="label_payment_info">Payment Information</string>
    <string name="label_payment_amount">Payment to Carrier</string>
    <string name="label_payment_method">Payment Method</string>
    <string name="label_payment_type">Collect Payment</string>
    <string name="label_payment_amount_received">Amount Received on Pickup</string>
    <string name="label_payment_remaining">Balance Remaining</string>
    <string name="label_payment_delivery_amount_received">Amount Received on Delivery</string>
    <string name="hint_payment_delivery_amount_received">Amount Received on Delivery *</string>
    <string name="label_payment_comment">Comment</string>
    <string name="label_payment_made">Payment Made</string>
    <string name="label_shipper">Shipper / Consignor</string>
    <string name="label_company_name">Company Name</string>
    <string name="label_contact_name">Contact Name</string>
    <string name="hint_contact_name">Contact Name *</string>
    <string name="label_address">Street Address</string>
    <string name="hint_address">Street Address *</string>
    <string name="label_address2"></string>
    <string name="hint_address2"></string>
    <string name="label_zip">Zip Code</string>
    <string name="hint_zip">Zip Code *</string>
    <string name="label_city">City</string>
    <string name="hint_city">City *</string>
    <string name="label_state">State</string>
    <string name="hint_state_">State *</string>
    <string name="hint_state">Select state</string>
    <string name="label_phone">Phone</string>
    <string name="label_phone1">Phone #1</string>
    <string name="hint_phone1">Phone #1 *</string>
    <string name="label_phone2">Phone #2</string>
    <string name="label_pick_up">Pickup Details</string>
    <string name="label_cell_phone">Cell Phone</string>
    <string name="label_email">Email</string>
    <string name="label_email1">Email *</string>
    <string name="label_email2">Email 2</string>
    <string name="label_email3">Email 3</string>
    <string name="label_delivery">Delivery Details</string>
    <string name="label_vehicles">VEHICLES</string>
    <string name="label_add_vehicle">Add Additional Vehicle to this eBOL</string>
    <string name="label_customer_signature">Customer Signature</string>
    <string name="label_driver_signature">Driver Signature</string>
    <string name="label_additional_info">Additional Information</string>
    <string name="label_phone_email">Contact Phone &amp; Email</string>
    <string name="label_vin">VIN # *</string>
    <string name="label_vin1">VIN #</string>
    <string name="label_vin_na">VIN is not available</string>
    <string name="label_year">Year *</string>
    <string name="label_year1">Year</string>
    <string name="label_make">Make *</string>
    <string name="label_make1">Make</string>
    <string name="label_model">Model *</string>
    <string name="label_model1">Model</string>
    <string name="label_type">Vehicle Type *</string>
    <string name="hint_type">Vehicle Type</string>
    <string name="label_trim">Trim</string>
    <string name="label_wide_load">Wide Load</string>
    <string name="label_drive_type">Drive Type</string>
    <string name="label_running">Running *</string>
    <string name="hint_running">Running</string>
    <string name="label_forklift">Forklift Required</string>
    <string name="label_vehicle_info">Vehicle Information</string>
    <string name="label_shipping_date">Shipping Dates</string>
    <string name="label_shipping_delay">Shipping Delay</string>
    <string name="label_drivers_login">Drivers Login</string>
    <string name="text_agreement_login"><![CDATA[By logging in, I agree to the Reliant Dispatch<br/><a href="https://reliantdispatch.com/terms">Terms and Conditions</a>]]></string>
    <string name="label_password">Password *</string>
    <string name="text_warning_login">WARNING: Drive Safely and Obey All Traffic Laws and Regulations. Increased data shows that distracted driving impairs a driver\'s ability. Please do not use this App while driving as this may cause you to be distracted, which may lead to a serious accident, injuries, death, and property damage.</string>
    <string name="label_remember">Remember me</string>
    <string name="text_signup">You don\'t have a Reliant Dispatch account?</string>
    <string name="text_copyright">Copyright © 2019 Reliant Dispatch, LLC. All rights reserved. All trademarks are the property of their respective owners.</string>
    <string name="label_email_drv">Driver’s Email *</string>
    <string name="title_no_internet">No internet connection detected.</string>
    <string name="text_no_internet">Reliant Dispatch requires an internet connection to function. Please turn on your mobile internet or connect to Wi-Fi and try again.</string>
    <string name="label_change_password">Password</string>
    <string name="label_share_information">Share Information</string>
</resources>