<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="fragment" type="com.driver.reliantdispatch.presentation.NoInternetFragment"/>
    </data>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_gravity="center">

            <TextView
                    android:text="@string/title_no_internet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:layout_marginLeft="11dp"
                    android:layout_marginRight="11dp"
                    android:layout_marginEnd="11dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/black"/>

            <TextView
                    android:text="@string/text_no_internet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="30dp"/>

            <Button
                    android:text="@string/button_try_again"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{fragment::onTryAgainClick}"
                    android:theme="@style/Blue.Button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:textColor="@android:color/white"
                    android:textAllCaps="false"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="30dp"/>

        </LinearLayout>
    </FrameLayout>
</layout>